# OvercookedIRL

./: aruco_generator.py  aruco_reader.py  aruco_tag_detector.py  feed_relay.py  item.py  overcooked_irl.py  station.py  test.py
Cameras/: findcamindices.py  multiplecamreader.py  stream_server.py
Fetch/: eth_fetch_setup.sh  wifi_fetch_setup.sh  wifi_setup.txt
Fetch/devel/: .catkin  .rosinstall  setup.sh
Fetch/devel/lib/pkgconfig/: test_pkg.pc
Fetch/devel/share/test_pkg/cmake/: test_pkgConfig.cmake
Fetch/src/: notes.txt
Fetch/src/fetch_exp/: CMakeLists.txt  package.xml
Fetch/src/fetch_exp/launch/: explore.launch
Fetch/src/test_pkg/: CMakeLists.txt
Fetch/src/test_pkg/launch/: fetch_movement.launch  my_robot.launch
Fetch/src/test_pkg/src/: arm_control.py  camera_viewer.py  fetch_movement.py  robot_hello.py  test_traj_client.py  test_traj_move.py
GameFramework/: aruco_tag_detector.py  config.py  feed_relay.py  final_station.py  final_window.py  item.py  main.py  order.py  overcooked_irl.py  station.py  style.py  ui_components.py
Simulation/FetchOvercooked/: data_saver.gd  data_saver.gd.uid  drop_off.tscn  icon.svg.import  item.gd  item.gd.uid  item.tscn  lord_crandy_bw.png.import  map.tscn  player.gd  player.gd.uid  player.tscn  project.godot  spawner.gd  spawner.gd.uid  spawner.tscn  station.gd  station.gd.uid  station.tscn  stats.gd  stats.gd.uid  table.gd  table.gd.uid  table.tscn
Simulation/FetchOvercooked/Bot/: bot.py
tags/: aruco_11_4x4_50.scad  aruco_11_4x4_black.scad  aruco_11_4x4_white.scad
